Doc/force-app/main/default/objects/Opportunity/fields/Competing_Against__c.field-meta.xml
<CustomField>
    <fullName>Competing_Against__c</fullName>
    <description>Who are the Competitors</description>
    <label>Competing Against</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Practice_Group__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Aderant Expert Time Entry</fullName>
            </value>
            <value>
                <fullName>Aderant Found Time</fullName>
            </value>
            <value>
                <fullName>BizTalk</fullName>
            </value>
            <value>
                <fullName>Carpe Diem Classic</fullName>
            </value>
            <value>
                <fullName>Carpe Diem Enterprise</fullName>
            </value>
            <value>
                <fullName>Prosperoware</fullName>
            </value>
            <value>
                <fullName>DocAuto</fullName>
            </value>
            <value>
                <fullName>Doing nothing</fullName>
            </value>
            <value>
                <fullName>Don&apos;t know</fullName>
            </value>
            <value>
                <fullName>DTE Axiom</fullName>
            </value>
            <value>
                <fullName>Elite 3E Time Entry</fullName>
            </value>
            <value>
                <fullName>Elite WebView</fullName>
            </value>
            <value>
                <fullName>Frayman Group</fullName>
            </value>
            <value>
                <fullName>HP Autonomy</fullName>
            </value>
            <value>
                <fullName>Internal Development</fullName>
            </value>
            <value>
                <fullName>Legal 55</fullName>
            </value>
            <value>
                <fullName>Rekoop</fullName>
            </value>
            <value>
                <fullName>SmartTime</fullName>
            </value>
            <value>
                <fullName>TimeKM</fullName>
            </value>
            <value>
                <fullName>Zapproved Legal Hold Pro</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>RBRO</fullName>
            </value>
            <value>
                <fullName>Wertheim / Winc Tools</fullName>
            </value>
            <value>
                <fullName>Whitehill</fullName>
            </value>
            <value>
                <fullName>Aderant</fullName>
            </value>
            <value>
                <fullName>APS (DTE)</fullName>
            </value>
            <value>
                <fullName>Bellefield iTimeKeep</fullName>
            </value>
            <value>
                <fullName>Elite</fullName>
            </value>
            <value>
                <fullName>Tikit</fullName>
            </value>
            <value>
                <fullName>Upsell existing customer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>