Doc/force-app/main/default/objects/Opportunity/fields/Competitive_Partner_Bid__c.field-meta.xml
<CustomField>
    <fullName>Competitive_Partner_Bid__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Competitive Partner Bid</label>
    <type>Checkbox</type>
</CustomField>