Doc/force-app/main/default/objects/Opportunity/fields/Completeness_Score_Business_Case__c.field-meta.xml
<CustomField>
    <fullName>Completeness_Score_Business_Case__c</fullName>
    <formula>(IF(
  ISBLANK(Contract_Signer__c),
  0,
  1
)+
IF(
  ISBLANK(TEXT(Delivered_Business_Case_ROI__c)),
  0,
  1
)+
IF(
  Business_Case_Attached_to_Opportunity__c,
  1,
  0
))/3</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Completeness Score: Business Case</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>