Doc/force-app/main/default/objects/Opportunity/fields/Completeness_Score_Investigation__c.field-meta.xml
<CustomField>
    <fullName>Completeness_Score_Investigation__c</fullName>
    <formula>(
IF(
  ISBLANK(TEXT(Primary_Competitor__c)),
  0,
  1
)+
IF(
  ISBLANK(TEXT(Project_Budgeted__c)),
  0,
  2
)+
IF(
  ISBLANK(TEXT(Urgency_Driver_for_Q4_2006__c)),
  0,
  2
)+
IF(
  ISBLANK(Project_Start_Date__c),
  0,
  1
)+
IF(
  ISBLANK(TEXT(Firm_Procurement_Team__c)),
  0,
  1
))/10</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Completeness Score: Investigation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>