Doc/force-app/main/default/objects/Opportunity/fields/Concession_Amount__c.field-meta.xml
<CustomField>
    <fullName>Concession_Amount__c</fullName>
    <label>Amount at Risk</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>