Doc/force-app/main/default/objects/Opportunity/fields/Configurator_Status__c.field-meta.xml
<CustomField>
    <fullName>Configurator_Status__c</fullName>
    <description>Has the Solution Consultant been involved with the deal sufficiently to produce, and deliver to Sales Ops, an execution ready copy of the Configurator?</description>
    <inlineHelpText>This field should be updated by the Solution Consultant only.</inlineHelpText>
    <label>Configurator Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Unknown</fullName>
                <default>true</default>
                <label>Unknown</label>
            </value>
            <value>
                <fullName>Initial Proposed</fullName>
            </value>
            <value>
                <fullName>Delivered</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Not needed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>