Doc/force-app/main/default/objects/Opportunity/fields/Consulting_Proposition__c.field-meta.xml
<CustomField>
    <fullName>Consulting_Proposition__c</fullName>
    <description>Outlines the area of focus for the Consulting group</description>
    <label>Consulting Proposition</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Growth - Commercial Excellence</fullName>
            </value>
            <value>
                <fullName>Effectiveness - Improve Profitability</fullName>
            </value>
            <value>
                <fullName>Effectiveness - Business Acceptance</fullName>
            </value>
            <value>
                <fullName>Effectiveness - Enhance Legal Project Delivery</fullName>
            </value>
            <value>
                <fullName>Effectiveness - Matter Management Effectiveness</fullName>
            </value>
            <value>
                <fullName>Effectiveness - Change Management</fullName>
            </value>
            <value>
                <fullName>Effectiveness - Data</fullName>
            </value>
            <value>
                <fullName>Effectiveness - Technology Strategy</fullName>
            </value>
            <value>
                <fullName>Effectiveness - Business Case Development</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>