Doc/force-app/main/default/objects/Opportunity/fields/Consulting_Services_Discount__c.field-meta.xml
<CustomField>
    <fullName>Consulting_Services_Discount__c</fullName>
    <label>Strategic Consulting Services Discount</label>
    <summarizedField>OpportunityLineItem.UnitPrice</summarizedField>
    <summaryFilterItems>
        <field>OpportunityLineItem.Product_group__c</field>
        <operation>equals</operation>
        <value>Services, Consulting</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>OpportunityLineItem.UnitPrice</field>
        <operation>lessOrEqual</operation>
        <value>0</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>OpportunityLineItem.Product_type_for_roll_up__c</field>
        <operation>equals</operation>
        <value>Risk, Transformation</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>OpportunityLineItem.Product_Code_Text__c</field>
        <operation>notEqual</operation>
        <value>IN-00989</value>
    </summaryFilterItems>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>