Doc/force-app/main/default/objects/Opportunity/fields/Consulting_services_hours__c.field-meta.xml
<CustomField>
    <fullName>Consulting_services_hours__c</fullName>
    <label>Strategic Consulting Hours</label>
    <summarizedField>OpportunityLineItem.Services_Hours__c</summarizedField>
    <summaryFilterItems>
        <field>OpportunityLineItem.Product_type_for_roll_up__c</field>
        <operation>equals</operation>
        <value>Risk, Transformation</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>OpportunityLineItem.Product_Code_Text__c</field>
        <operation>notEqual</operation>
        <value>BU-01608, IN-00989</value>
    </summaryFilterItems>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>