Doc/force-app/main/default/objects/Opportunity/fields/Consulting_Services_List__c.field-meta.xml
<CustomField>
    <fullName>Consulting_Services_List__c</fullName>
    <label>Strategic Consulting List</label>
    <summarizedField>OpportunityLineItem.UnitPrice</summarizedField>
    <summaryFilterItems>
        <field>OpportunityLineItem.UnitPrice</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>OpportunityLineItem.Product_type_for_roll_up__c</field>
        <operation>equals</operation>
        <value>Transformation, Risk</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>OpportunityLineItem.Product_Code_Text__c</field>
        <operation>notEqual</operation>
        <value>IN-00989</value>
    </summaryFilterItems>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>