Doc/force-app/main/default/objects/Opportunity/fields/Contingency_Terms__c.field-meta.xml
<CustomField>
    <fullName>Contingency_Terms__c</fullName>
    <description>Identify any exceptions from standard net 30 terms.</description>
    <inlineHelpText>Identify any exceptions from standard net 30 terms.</inlineHelpText>
    <label>Contingency Terms</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>