Doc/force-app/main/default/objects/Opportunity/fields/Contract_Signer__c.field-meta.xml
<CustomField>
    <fullName>Contract_Signer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract Signer</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Contract Signer)</relationshipLabel>
    <relationshipName>Opportunities6</relationshipName>
    <type>Lookup</type>
</CustomField>