Doc/force-app/main/default/objects/Opportunity/fields/Contract_Status__c.field-meta.xml
<CustomField>
    <fullName>Contract_Status__c</fullName>
    <formula>TEXT(Associated_Contract_OSA__r.Status)</formula>
    <label>Contract Status</label>
    <type>Text</type>
</CustomField>