Doc/force-app/main/default/objects/Opportunity/fields/Count_SOW__c.field-meta.xml
<CustomField>
    <fullName>Count_SOW__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Count SOW</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>