Doc/force-app/main/default/objects/Opportunity/fields/Created_by_Simplified_Quoting__c.field-meta.xml
<CustomField>
    <fullName>Created_by_Simplified_Quoting__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set to true by the Agentic / Simplified Quoting flow. When true, OP4I platform events are published for the Opportunity (and its Opportunity Products) regardless of Deal Type, including Add-On.</description>
    <label>Created by Simplified Quoting</label>
    <type>Checkbox</type>
</CustomField>