Doc/force-app/main/default/objects/Opportunity/fields/Criteria_1__c.field-meta.xml
<CustomField>
    <fullName>Criteria_1__c</fullName>
    <defaultValue>false</defaultValue>
    <description>sales criteria</description>
    <label>1-Budget / Decision Maker</label>
    <type>Checkbox</type>
</CustomField>