Doc/force-app/main/default/objects/Opportunity/fields/Current_ACV__c.field-meta.xml
<CustomField>
    <fullName>Current_ACV__c</fullName>
    <formula>Account.Account_Recurring_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current ACV</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>