Doc/force-app/main/default/objects/Opportunity/fields/Current_ACV_per_Lawyer_Professional__c.field-meta.xml
<CustomField>
    <fullName>Current_ACV_per_Lawyer_Professional__c</fullName>
    <formula>Account.Account_Recurring_Per_Lawyer__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This field pulls data from Account &quot;ACV per lawyer&quot; field. If you see error here: fill out Account: &quot;Recurring Amount&quot; and &quot;Lawyers / Professionals&quot;</inlineHelpText>
    <label>Current ACV per Lawyer/Professional</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>