Doc/force-app/main/default/objects/Opportunity/fields/Customer_Lifecycle_Stage__c.field-meta.xml
<CustomField>
    <fullName>Customer_Lifecycle_Stage__c</fullName>
    <formula>TEXT(Subscription__r.Customer_Lifecycle_Stage__c)</formula>
    <label>Product Implementation Phase</label>
    <type>Text</type>
</CustomField>