Doc/force-app/main/default/objects/Opportunity/fields/Date_Opportunity_Closed__c.field-meta.xml
<CustomField>
    <fullName>Date_Opportunity_Closed__c</fullName>
    <inlineHelpText>What is the actual date that this opportunity was changed to closed?</inlineHelpText>
    <label>Date Opportunity Closed</label>
    <type>Date</type>
</CustomField>