Doc/force-app/main/default/objects/Opportunity/fields/Days_past_close__c.field-meta.xml
<CustomField>
    <fullName>Days_past_close__c</fullName>
    <description>Number of days past the opportunity close</description>
    <formula>TODAY() - CloseDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days past close</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>