Doc/force-app/main/default/objects/Opportunity/fields/Days_Since_Last_Activity_Bucket__c.field-meta.xml
<CustomField>
    <fullName>Days_Since_Last_Activity_Bucket__c</fullName>
    <formula>IF(
  ISBLANK(LastActivityDate),
  &quot;5. No Activity&quot;,
  IF(
    Days_Since_Last_Activity__c &gt; 150,
    &quot;4. More than 150 Days&quot;,
    IF(
      Days_Since_Last_Activity__c &gt; 120,
      &quot;3. Less than 150 Days&quot;,
      IF(
        Days_Since_Last_Activity__c &gt; 90,
        &quot;2. Less than 120 Days&quot;,
        &quot;1. Less than 90 Days&quot;
      )
    )
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Since Last Activity (Bucket)</label>
    <type>Text</type>
</CustomField>