Doc/force-app/main/default/objects/Opportunity/fields/Deal_Length__c.field-meta.xml
<CustomField>
    <fullName>Deal_Length__c</fullName>
    <formula>IF(
  IsClosed,
  IF(
    CloseDate-First_Entered_Pre_Shopping_Date__c&lt;0,
    0,
    CloseDate-First_Entered_Pre_Shopping_Date__c
  ),
  IF(
    TODAY()-First_Entered_Pre_Shopping_Date__c&lt;0,
    0,
    TODAY()-First_Entered_Pre_Shopping_Date__c
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deal Length</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>