Doc/force-app/main/default/objects/Opportunity/fields/Deal_Quality__c.field-meta.xml
<CustomField>
    <fullName>Deal_Quality__c</fullName>
    <label>Deal Quality</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Green</fullName>
                <color>#78C953</color>
                <label>Green</label>
            </value>
            <value>
                <fullName>Blue</fullName>
                <color>#0B6FCE</color>
                <label>Blue</label>
            </value>
            <value>
                <fullName>Red</fullName>
                <color>#CC0000</color>
                <label>Red</label>
            </value>
            <value>
                <fullName>N/A</fullName>
                <color>#BBBBBB</color>
                <label>N/A</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>