Doc/force-app/main/default/objects/Opportunity/fields/Deal_Quality_Score__c.field-meta.xml
<CustomField>
    <fullName>Deal_Quality_Score__c</fullName>
    <label>Deal Quality Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>