Doc/force-app/main/default/objects/Opportunity/fields/Deal_Reconciliation_Notes_OP4I__c.field-meta.xml
<CustomField>
    <fullName>Deal_Reconciliation_Notes_OP4I__c</fullName>
    <label>Deal Reconciliation Notes in OP4I</label>
    <type>TextArea</type>
</CustomField>