Doc/force-app/main/default/objects/Opportunity/fields/Deal_Strength_Pain_Delta__c.field-meta.xml
<CustomField>
    <fullName>Deal_Strength_Pain_Delta__c</fullName>
    <formula>IF(
  OR(
    ISBLANK(TEXT(MD_Eval_Pain__c)),
    ISBLANK(TEXT(VP_Eval_Pain__c))
  ),
  99,
  ABS(MD_Eval_Pain_Number__c-VP_Eval_Pain_Number__c)
)</formula>
    <label>Deal Strength: Pain Delta</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>