Doc/force-app/main/default/objects/Opportunity/fields/Decision_makers_involved__c.field-meta.xml
<CustomField>
    <fullName>Decision_makers_involved__c</fullName>
    <label>Decision makers involved</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CIO</fullName>
            </value>
            <value>
                <fullName>Lawyers</fullName>
            </value>
            <value>
                <fullName>Secretaries</fullName>
            </value>
            <value>
                <fullName>CFO</fullName>
            </value>
            <value>
                <fullName>GC/Risk Partner</fullName>
            </value>
            <value>
                <fullName>Risk Department</fullName>
            </value>
            <value>
                <fullName>Conflicts/Intake Department</fullName>
            </value>
            <value>
                <fullName>COO/Managing Partner</fullName>
            </value>
            <value>
                <fullName>Director of Apps</fullName>
            </value>
            <value>
                <fullName>Enterprise Architect</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>