Doc/force-app/main/default/objects/Opportunity/fields/Decision_Process_Picklist__c.field-meta.xml
<CustomField>
    <fullName>Decision_Process_Picklist__c</fullName>
    <description>How will the decision be made and who will make it? How have other similar decisions been made in the past, and how long does the process take?</description>
    <label>Decision Process Score</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>