Doc/force-app/main/default/objects/Opportunity/fields/Delegated_Owner__c.field-meta.xml
<CustomField>
    <fullName>Delegated_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>SC-000027</description>
    <label>Delegated Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities3</relationshipName>
    <type>Lookup</type>
</CustomField>