Doc/force-app/main/default/objects/Opportunity/fields/Delivered_Proposal__c.field-meta.xml
<CustomField>
    <fullName>Delivered_Proposal__c</fullName>
    <label>Delivered Proposal?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>