Doc/force-app/main/default/objects/Opportunity/fields/Discount_Level_Software_Year_1__c.field-meta.xml
<CustomField>
    <fullName>Discount_Level_Software_Year_1__c</fullName>
    <inlineHelpText>What is the discount percent?</inlineHelpText>
    <label>Discount Level - Software</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>