Doc/force-app/main/default/objects/Opportunity/fields/Disposition__c.field-meta.xml
<CustomField>
    <fullName>Disposition__c</fullName>
    <description>Disposition is used for calculating win rates.  It forces labels open opportunites aged &gt;365 days into &quot;Old - No Decsision&quot;.</description>
    <formula>CASE(RecordTypeId,
  &quot;01250000000Hd58&quot;, &quot;Renewal&quot;,
  &quot;01250000000HdeD&quot;, &quot;Adjustment&quot;,
  &quot;01250000000Hq3W&quot;, &quot;Cancellation&quot;,
  IF(
    IsClosed,
    CASE(StageName,
      &quot;Closed Won&quot;, &quot;Closed Won&quot;,
      &quot;Closed Lost&quot;, &quot;Closed Lost&quot;,
      &quot;Closed - No Decision&quot;, &quot;Closed - No Decision&quot;,
      &quot;Other Closed&quot;
    ),
    IF(
      Opportunity_Age__c &gt; 365,
      &quot;Old - No Decision&quot;,
      IF(
        Probability &lt; 0.35,
        &quot;Needs Business Case&quot;, 
        IF(
          Probability &lt;1.0,
          &quot;Shopping for a Solution&quot;,  
          &quot;Probability Unknown&quot;
        )
      )
    )
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Disposition is used for calculating win rates.  It forces labels open opportunites aged &gt;365 days into &quot;Old - No Decsision&quot;.</inlineHelpText>
    <label>Disposition</label>
    <type>Text</type>
</CustomField>