Doc/force-app/main/default/objects/Opportunity/fields/Do_nothing_reason__c.field-meta.xml
<CustomField>
    <fullName>Do_nothing_reason__c</fullName>
    <inlineHelpText>Select a reason the customer have selected to do nothing at this time.</inlineHelpText>
    <label>Do nothing reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Primary_Competitor__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Could not get stakeholder approval</fullName>
            </value>
            <value>
                <fullName>Could not get budget approval</fullName>
            </value>
            <value>
                <fullName>Waiting on next budget cycle</fullName>
            </value>
            <value>
                <fullName>The decision-maker/stakeholders have changed</fullName>
            </value>
            <value>
                <fullName>Already have capabilities in house - no value add</fullName>
            </value>
            <value>
                <fullName>Waiting on other technology decisions necessary prior to this decision</fullName>
            </value>
            <value>
                <fullName>Did not need the solution in the first place</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>