Doc/force-app/main/default/objects/Opportunity/fields/Do_we_have_access_to_Exec_Sponsor__c.field-meta.xml
<CustomField>
    <fullName>Do_we_have_access_to_Exec_Sponsor__c</fullName>
    <description>Ticket 26607</description>
    <label>Do we have access to Exec Sponsor?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>